2001-08-18  Bart Schaefer  <schaefer@zsh.org>

	* 15617: Src/exec.c: Fix exit status of zsh -fc '! command'.

2001-08-17  Adam Spiers  <adam@spiers.net>

	* unposted: Functions/Prompts/prompt_adam2_setup: eliminate
	horrible inefficiencies resulting from avoidable fork()s

2001-08-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 15653: Completion/Base/Core/_main_complete: make insert-tab
	really default to `true'

	* 15650: Completion/Unix/Type/_path_files, Src/Zle/compcore.c: fix 
	test for expanded paths in _path_files; more intelligently move
	glob flags (in particular those added by _approximate) after a
	tilde

2001-08-16  Peter Stephenson  <pws@csr.com>

	* 15647: Functions/Misc/zcalc:  with output not showing the
	base (e.g. [##16]) reuse of previous values didn't work.

2001-08-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 15639: Src/text.c: fix bug for output of unquoted here-docs and
	-strings with special characters

	* 15638: Completion/Base/Completer/_approximate: make sure that
	there is one of the group-options before using it

2001-08-15  Geoff Wing  <gcw@zsh.org>
	
	* 15621: Src/Zle/zle_refresh.c: display of status line was being
	mucked up; also fix continuation markers "<...." and "<....>"

	* unposted: Src/Zle/zle_refresh.c: fix possible seg fault on a
	screen height shrink

2001-08-15  Adam Spiers  <adam@spiers.net>

	* unposted: Doc/Zsh/expn.yo: mention the word `greedy' in the
	docs for the S flag, to make it easier to find for those used to
	Perl-speak.

	* unposted: Doc/Zsh/compsys.yo: add missing docs for cache-policy
	style.

	* 15630: Completion/Redhat/Command/_rpm: update caching policy
	for newer versions of rpm.

2001-08-14  Clint Adams  <clint@zsh.org>

	* 15629: Completion/Unix/Command/_zip: unzip -Z
	should behave the same as zipinfo.

2001-08-13  Bart Schaefer  <schaefer@brasslantern.com>

	* 15613 (plus unposted additions): Test/B02typeset.ztst: Tests for
	correct behavior of typeset options and arguments.
